--- a/project.ipynb
+++ b/project.ipynb
@@ -9,23 +9,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.utils import shuffle\n",
-    "from sklearn.utils.class_weight import compute_sample_weight"
+    "from sklearn.utils.class_weight import compute_sample_weight\n",
+    "\n",
+    "import matplotlib as plt\n",
+    "import seaborn as sns\n",
+    "import librosa\n",
+    "\n"
    ]
   },
   {
@@ -37,12 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "development_data = pd.read_csv(\"development.csv\")\n",
-    "evaluation_data = pd.read_csv(\"evaluation.csv\")\n"
+    "evaluation_data = pd.read_csv(\"evaluation.csv\")"
    ]
   },
   {
@@ -55,23 +59,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def process_tempo_column(df):\n",
     "    df['tempo'] = (\n",
     "        df['tempo']\n",
-    "        .astype(str)        # force string\n",
-    "        .str.strip('[]')   # remove brackets\n",
-    "        .astype(float)     # convert\n",
+    "        .astype(str)\n",
+    "        .str.strip('[]')\n",
+    "        .astype(float)\n",
     "    )\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,18 +114,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "numerical_features = [\n",
     "    'sampling_rate', 'mean_pitch', 'max_pitch', 'min_pitch',\n",
     "    'jitter', 'shimmer', 'energy', 'zcr_mean',\n",
-    "    'spectral_centroid_mean', 'tempo',\n",
+    "    'spectral_centroid_mean', 'tempo', 'hnr',\n",
     "    'num_words', 'num_characters', 'num_pauses', 'silence_duration'\n",
     "]\n",
     "\n",
-    "categorical_features = ['gender', 'ethnicity']\n"
+    "categorical_features = ['gender', 'ethnicity']\n",
+    "\n"
    ]
   },
   {
@@ -232,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,23 +251,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This code splits the development_data into features (X) and target (y), then further splits them into training and testing sets using train_test_split, with 20% of the data reserved for testing (test_size=0.2). The random_state=42 ensures reproducibility."
+    "This code splits the development_data into features (X) and target (y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = development_data[numerical_features + categorical_features]\n",
     "y = development_data[\"age\"]\n",
-    "\n",
-    "X_train, X_test, y_train, y_test, w_train, w_test = train_test_split(\n",
-    "    X, y, sample_weights,\n",
-    "    test_size=0.2,\n",
-    "    random_state=42\n",
-    ")\n"
+    "\n"
    ]
   },
   {
@@ -275,26 +275,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "param_grid_rf = {\n",
-    "    \"model__n_estimators\": [300, 500, 700],\n",
-    "    \"model__max_depth\": [None, 20, 30, 40],\n",
-    "    \"model__min_samples_split\": [2, 5, 10],\n",
+    "    \"model__n_estimators\": [300, 600, 1000],\n",
+    "    \"model__max_depth\": [None, 20, 40, 60],\n",
+    "    \"model__min_samples_split\": [2, 5],\n",
     "    \"model__min_samples_leaf\": [1, 2, 4],\n",
-    "    \"model__max_features\": [\"sqrt\", 0.7]\n",
+    "    \"model__max_features\": [\"sqrt\", 0.5]\n",
     "}\n",
     "\n",
+    "\n",
     "param_grid_gbr = {\n",
-    "    \"model__n_estimators\": [400, 600, 800],\n",
-    "    \"model__learning_rate\": [0.03, 0.05, 0.07],\n",
+    "    \"model__n_estimators\": [300, 600, 1000],\n",
+    "    \"model__learning_rate\": [0.01, 0.05, 0.1],\n",
     "    \"model__max_depth\": [3, 4, 5],\n",
-    "    \"model__min_samples_split\": [2, 5, 10],\n",
-    "    \"model__min_samples_leaf\": [1, 2, 4],\n",
-    "    \"model__subsample\": [0.7, 0.8, 0.9]\n",
+    "    \"model__min_samples_split\": [2, 5],\n",
+    "    \"model__min_samples_leaf\": [1, 2],\n",
+    "    \"model__subsample\": [0.8, 1.0]\n",
     "}\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -314,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +348,7 @@
     "best_model = None\n",
     "best_score = float(\"inf\")\n",
     "best_name = \"\"\n",
-    "results = {}   # <-- store metrics for plotting\n",
+    "results = {}  \n",
     "\n",
     "\n",
     "for name, (pipe, grid) in pipelines.items():\n",
@@ -363,7 +365,7 @@
     "    )\n",
     "\n",
     "    # fit with weights\n",
-    "    search.fit(X_train, y_train, model__sample_weight=w_train)\n",
+    "    search.fit(X, y, model__sample_weight=sample_weights)\n",
     "\n",
     "    mse = -search.best_score_\n",
     "\n",
@@ -382,37 +384,9 @@
     "# =========================================================\n",
     "print(f\"\\nBest overall model: {best_name}\")\n",
     "\n",
-    "y_train_pred = best_model.predict(X_train)\n",
-    "y_test_pred  = best_model.predict(X_test)\n",
-    "\n",
-    "train_rmse = np.sqrt(mean_squared_error(y_train, y_train_pred))\n",
-    "test_rmse  = np.sqrt(mean_squared_error(y_test, y_test_pred))\n",
-    "\n",
-    "print(f\"Train RMSE: {train_rmse:.3f}\")\n",
-    "print(f\"Test  RMSE: {test_rmse:.3f}\")\n",
     "\n",
     "\n",
-    "# =========================================================\n",
-    "# Build results dictionary (for plotting later)\n",
-    "# =========================================================\n",
-    "for name, (pipe, grid) in pipelines.items():\n",
-    "\n",
-    "    results[name] = {}\n",
-    "    n_list = grid[\"model__n_estimators\"]\n",
-    "\n",
-    "    for n in n_list:\n",
-    "\n",
-    "        model = pipe.set_params(model__n_estimators=n)\n",
-    "\n",
-    "        model.fit(X_train, y_train, model__sample_weight=w_train)\n",
-    "\n",
-    "        train_pred = model.predict(X_train)\n",
-    "        test_pred  = model.predict(X_test)\n",
-    "\n",
-    "        results[name][n] = {\n",
-    "            \"train_mse\": mean_squared_error(y_train, train_pred),\n",
-    "            \"test_mse\":  mean_squared_error(y_test, test_pred)\n",
-    "        }\n"
+    "\n"
    ]
   },
   {
